--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -123,14 +123,23 @@ jobs:
           - arch: arm
             alpine_arch: armv7
     steps:
-      - name: Install dependencies
+      - name: Install dependencies and setup user
         run: |
-          apk add --no-cache git go build-base alpine-sdk coreutils
+          apk add --no-cache git go build-base alpine-sdk coreutils sudo
+          
+          # Create a non-root user for abuild
+          adduser -D -s /bin/sh builder
+          addgroup builder abuild
+          echo "builder ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
+          
+          # Create the build directory with proper ownership
+          mkdir -p /home/builder/build
+          chown -R builder:builder /home/builder
           
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Go environment
+      - name: Set up Go environment and build binary
         run: |
           if [ "${{ matrix.arch }}" = "amd64" ]; then
             export GOARCH=amd64
@@ -144,35 +153,36 @@ jobs:
           if [ -n "$GOARM" ]; then
             echo "GOARM=$GOARM" >> $GITHUB_ENV
           fi
-
-      - name: Build Go binary
-        run: |
+          
+          # Build as root, then copy to builder's directory
           go build -buildvcs=false -o ssh-sync-${{ matrix.arch }} -ldflags "-X main.version=test-build"
+          cp ssh-sync-${{ matrix.arch }} /home/builder/build/
+          chown builder:builder /home/builder/build/ssh-sync-${{ matrix.arch }}
 
       - name: Generate test Alpine signing keys
         run: |
-          mkdir -p ~/.abuild
+          # Setup keys for the builder user
+          sudo -u builder mkdir -p /home/builder/.abuild
           
           # Generate a test RSA key pair for Alpine package signing
-          openssl genrsa -out ~/.abuild/ssh-sync-test.rsa 2048
+          sudo -u builder openssl genrsa -out /home/builder/.abuild/ssh-sync-test.rsa 2048
           
           # Extract public key in the format abuild expects (RSA public key format)
-          openssl rsa -in ~/.abuild/ssh-sync-test.rsa -pubout -out ~/.abuild/ssh-sync-test.rsa.pub
+          sudo -u builder openssl rsa -in /home/builder/.abuild/ssh-sync-test.rsa -pubout -out /home/builder/.abuild/ssh-sync-test.rsa.pub
           
-          chmod 600 ~/.abuild/ssh-sync-test.rsa
-          chmod 644 ~/.abuild/ssh-sync-test.rsa.pub
+          sudo -u builder chmod 600 /home/builder/.abuild/ssh-sync-test.rsa
+          sudo -u builder chmod 644 /home/builder/.abuild/ssh-sync-test.rsa.pub
           
           echo "Generated test Alpine signing keys"
           echo "Private key:"
-          ls -la ~/.abuild/ssh-sync-test.rsa
+          ls -la /home/builder/.abuild/ssh-sync-test.rsa
           echo "Public key:"
-          ls -la ~/.abuild/ssh-sync-test.rsa.pub
+          ls -la /home/builder/.abuild/ssh-sync-test.rsa.pub
 
       - name: Create APKBUILD file
         run: |
-          mkdir -p apk-build
-          cd apk-build
-          cat > APKBUILD << 'EOF'
+          sudo -u builder mkdir -p /home/builder/build/apk-build
+          sudo -u builder tee /home/builder/build/apk-build/APKBUILD > /dev/null << 'EOF'
           # Maintainer: ssh-sync test
           pkgname=ssh-sync
           pkgver=test-build
@@ -190,27 +200,25 @@ jobs:
           EOF
           
           # Copy the binary to the source location
-          cp ../ssh-sync-${{ matrix.arch }} ssh-sync
+          sudo -u builder cp /home/builder/build/ssh-sync-${{ matrix.arch }} /home/builder/build/apk-build/ssh-sync
 
       - name: Test Alpine package build and signing
         run: |
-          cd apk-build
+          cd /home/builder/build/apk-build
           
-          # Create checksums
-          abuild checksum
-          
-          # Test build the package (this will test signing capabilities)
-          abuild -r || {
+          # Run abuild as the builder user
+          sudo -u builder abuild checksum
+          sudo -u builder abuild -r || {
             echo "Alpine package build failed, trying alternative approach..."
             
             # Alternative: create package manually for testing
-            mkdir -p test-pkg/usr/local/bin
-            cp ssh-sync test-pkg/usr/local/bin/ssh-sync
-            chmod 755 test-pkg/usr/local/bin/ssh-sync
+            sudo -u builder mkdir -p test-pkg/usr/local/bin
+            sudo -u builder cp ssh-sync test-pkg/usr/local/bin/ssh-sync
+            sudo -u builder chmod 755 test-pkg/usr/local/bin/ssh-sync
             
             # Create a simple .apk structure (tar.gz with control info)
-            mkdir -p .control
-            cat > .control/.PKGINFO << 'PKGEOF'
+            sudo -u builder mkdir -p .control
+            sudo -u builder tee .control/.PKGINFO > /dev/null << 'PKGEOF'
           pkgname = ssh-sync
           pkgver = test-build-r1
           pkgdesc = ssh-sync application (test build)
@@ -220,16 +228,16 @@ jobs:
           PKGEOF
             
             # Create the package archive
-            tar -czf ../ssh-sync-test-build-r1.apk -C test-pkg . -C ../.control .
+            sudo -u builder tar -czf ../ssh-sync-test-build-r1.apk -C test-pkg . -C .control .
             
             echo "Created test .apk package manually"
             ls -la ../ssh-sync-test-build-r1.apk
           }
           
           # Check if we have any .apk files
-          if ls ~/packages/*/{{ matrix.alpine_arch }}/*.apk 1> /dev/null 2>&1; then
+          if ls /home/builder/packages/*/{{ matrix.alpine_arch }}/*.apk 1> /dev/null 2>&1; then
             echo "Alpine package built successfully via abuild:"
-            ls -la ~/packages/*/{{ matrix.alpine_arch }}/*.apk
+            ls -la /home/builder/packages/*/{{ matrix.alpine_arch }}/*.apk
           elif [ -f "../ssh-sync-test-build-r1.apk" ]; then
             echo "Alpine package created manually:"
             ls -la ../ssh-sync-test-build-r1.apk
@@ -242,19 +250,19 @@ jobs:
         run: |
           echo "=== Alpine Build Summary for ${{ matrix.arch }} (${{ matrix.alpine_arch }}) ==="
           echo "Binary created:"
-          ls -la ssh-sync-${{ matrix.arch }}
+          ls -la /home/builder/build/ssh-sync-${{ matrix.arch }}
           
           echo "Package build directory:"
-          ls -la apk-build/
+          ls -la /home/builder/build/apk-build/
           
-          if ls ~/packages/*/{{ matrix.alpine_arch }}/*.apk 1> /dev/null 2>&1; then
+          if ls /home/builder/packages/*/{{ matrix.alpine_arch }}/*.apk 1> /dev/null 2>&1; then
             echo "Official .apk packages:"
-            ls -la ~/packages/*/{{ matrix.alpine_arch }}/*.apk
+            ls -la /home/builder/packages/*/{{ matrix.alpine_arch }}/*.apk
           fi
           
-          if [ -f "apk-build/ssh-sync-test-build-r1.apk" ]; then
+          if [ -f "/home/builder/build/ssh-sync-test-build-r1.apk" ]; then
             echo "Manual test .apk package:"
-            ls -la apk-build/ssh-sync-test-build-r1.apk
+            ls -la /home/builder/build/ssh-sync-test-build-r1.apk
           fi
           
           echo "Alpine package build test completed successfully"
