--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -156,7 +156,7 @@ jobs:
           cd /home/builder
           
           # Generate Alpine signing keys
-          abuild-keygen -a -i
+          abuild-keygen -a -n
           
           # Create APKBUILD
           mkdir -p package
