Revert "fix version"
This reverts commit c2fa117c23e0508f05bba85c78dea8ee5aef82d2.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,7 +44,7 @@ jobs:
           fi
       -
         name: Go Build
-        run: go build -o ssh-sync-${{ matrix.arch }}.exe -ldflags "-X main.version=v0.0.0"
+        run: go build -o ssh-sync-${{ matrix.arch }}.exe -ldflags "-X main.version=test-build"
       -
         name: Verify build
         run: ls -la ssh-sync-${{ matrix.arch }}.exe
