Revert "non interactive keygen"
This reverts commit 595a6d62e407c5c1bb08a201edad56c88f442e49.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -156,7 +156,7 @@ jobs:
           cd /home/builder
           
           # Generate Alpine signing keys
-          abuild-keygen -a -n
+          abuild-keygen -a -i
           
           # Create APKBUILD
           mkdir -p package
