Remove alpine support (#70)
* alpine fix?

* vcs flag

* no ssh keygen

* not root user

* test

* ??

* file?

* non interactive keygen

* fix version

* restore refs..

* Revert "restore refs.."

This reverts commit 58acc82e762def1fefa09081f31240b3aac74086.

* Revert "fix version"

This reverts commit c2fa117c23e0508f05bba85c78dea8ee5aef82d2.

* Revert "non interactive keygen"

This reverts commit 595a6d62e407c5c1bb08a201edad56c88f442e49.

* Revert "file?"

This reverts commit 85d7cf9804630994106da1905c9835a45b020607.

* Revert "??"

This reverts commit 2b7e5a20572879db83fc291c90f264ebc27b870d.

* simplify

* keyfile finder?

* fix

* email

* works?

* binutils?

* remove alpine support

* no more alpines

* we forgot arm???

* we forgot arms?

* iss?

* alright never mind learned that the hard way i guess

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -77,3 +77,33 @@ jobs:
 
       - name: Go Build
         run: go build -o ssh-sync-${{ matrix.arch }} -ldflags "-X main.version=${{github.ref_name}}"
+
+      - name: Install FPM
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ruby ruby-dev rubygems build-essential rpm zstd
+          sudo gem install --no-document fpm
+
+      - name: Create test packages
+        run: |
+          # Create a .deb package
+          fpm -s dir -t deb -a ${{ matrix.arch }} -n ssh-sync -v "test-build" --description "ssh-sync test build" \
+          --deb-no-default-config-files \
+          ./ssh-sync-${{ matrix.arch }}=/usr/local/bin/ssh-sync
+
+          # Create an .rpm package
+          fpm -s dir -t rpm -a ${{ matrix.arch }} -n ssh-sync -v "test-build" --description "ssh-sync test build" \
+          ./ssh-sync-${{ matrix.arch }}=/usr/local/bin/ssh-sync
+
+          # Create an Arch Linux package (.tar.zst)
+          fpm -s dir -t tar -a ${{ matrix.arch }} -n ssh-sync -v "test-build" --description "ssh-sync test build" \
+          ./ssh-sync-${{ matrix.arch }}=/usr/local/bin/ssh-sync
+          # Compress with zstd and rename to follow Arch naming convention
+          mv ssh-sync.tar ssh-sync-test-build-${{ matrix.arch }}.tar
+          zstd ssh-sync-test-build-${{ matrix.arch }}.tar -o ssh-sync-test-build-${{ matrix.arch }}.pkg.tar.zst
+          rm ssh-sync-test-build-${{ matrix.arch }}.tar
+
+      - name: Verify packages were created
+        run: |
+          echo "Created packages:"
+          ls -la *.deb *.rpm *.pkg.tar.zst
