--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,11 +116,6 @@ jobs:
           fpm -s dir -t rpm -a ${{ matrix.arch }} -n ssh-sync -v ${{ github.ref_name }} --description "ssh-sync" \
           ./ssh-sync-${{ matrix.arch }}=/usr/local/bin/ssh-sync
 
-      - name: Create an .apk package (Alpine)
-        run: |
-          fpm -s dir -t apk -a ${{ matrix.arch }} -n ssh-sync -v ${{ github.ref_name }} --description "ssh-sync" \
-          ./ssh-sync-${{ matrix.arch }}=/usr/local/bin/ssh-sync
-
       - name: Create an Arch Linux package (.tar.zst)
         run: |
           fpm -s dir -t tar -a ${{ matrix.arch }} -n ssh-sync -v ${{ github.ref_name }} --description "ssh-sync" \
@@ -146,7 +141,6 @@ jobs:
         with:
           name: packages-${{ matrix.arch }}
           path: |
-            *.apk
             ./debian/${{ matrix.arch }}/*.deb
             ./rpm/${{ matrix.arch }}/*.rpm
             ./arch/${{ matrix.arch }}/*.pkg.tar.zst
@@ -159,7 +153,7 @@ jobs:
           username: ${{ secrets.REPO_SERVER_USER }}
           key: ${{ secrets.REPO_SERVER_SSH_KEY }}
           port: ${{ secrets.REPO_SERVER_PORT }}
-          source: "./debian/${{ matrix.arch }}/*.deb,./rpm/${{ matrix.arch }}/*.rpm,./arch/${{ matrix.arch }}/*.pkg.tar.zst,*.apk"
+          source: "./debian/${{ matrix.arch }}/*.deb,./rpm/${{ matrix.arch }}/*.rpm,./arch/${{ matrix.arch }}/*.pkg.tar.zst"
           target: ${{ secrets.REPO_SERVER_PATH }}
           overwrite: true
 
@@ -292,90 +286,6 @@ jobs:
 
             echo "Debian repository updated and signed successfully"
 
-      - name: Setup Alpine Repository and Sign Packages
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: ${{ secrets.REPO_SERVER_HOST }}
-          username: ${{ secrets.REPO_SERVER_USER }}
-          key: ${{ secrets.REPO_SERVER_SSH_KEY }}
-          port: ${{ secrets.REPO_SERVER_PORT }}
-          script: |
-            cd ${{ secrets.REPO_SERVER_PATH }}
-
-            # Install Alpine package tools if not present
-            if ! command -v abuild-sign &> /dev/null; then
-                echo "Installing Alpine package tools..."
-                # Download and install alpine tools
-                wget -q https://gitlab.alpinelinux.org/api/v4/projects/5/packages/generic/v2.14.0/x86_64/apk.static -O /tmp/apk.static
-                chmod +x /tmp/apk.static
-                
-                # Download abuild-sign and related tools
-                if ! command -v abuild-sign &> /dev/null; then
-                    echo "Installing abuild tools..."
-                    /tmp/apk.static add --no-cache --initdb --root /tmp/alpine-root alpine-sdk
-                    ln -sf /tmp/alpine-root/usr/bin/abuild-sign /usr/local/bin/abuild-sign 2>/dev/null || true
-                fi
-            fi
-
-            # Setup Alpine RSA keys for signing
-            mkdir -p ~/.abuild
-            if [ ! -f ~/.abuild/ssh-sync.rsa ]; then
-                echo "Setting up Alpine RSA keys..."
-                echo "${{ secrets.ALPINE_PRIVATE_KEY }}" | base64 -d > ~/.abuild/ssh-sync.rsa
-                echo "${{ secrets.ALPINE_PUBLIC_KEY }}" | base64 -d > ~/.abuild/ssh-sync.rsa.pub
-                chmod 600 ~/.abuild/ssh-sync.rsa
-                chmod 644 ~/.abuild/ssh-sync.rsa.pub
-            fi
-
-            # Create alpine directory structure
-            mkdir -p alpine/x86_64
-            mkdir -p alpine/aarch64
-            mkdir -p alpine/armhf
-
-            # Move .apk packages to appropriate architecture directories
-            find . -maxdepth 1 -name "*amd64*.apk" -exec mv {} alpine/x86_64/ \; 2>/dev/null || true
-            find . -maxdepth 1 -name "*arm64*.apk" -exec mv {} alpine/aarch64/ \; 2>/dev/null || true  
-            find . -maxdepth 1 -name "*arm*.apk" -exec mv {} alpine/armhf/ \; 2>/dev/null || true
-
-            # Sign packages and generate APKINDEX for each architecture
-            for arch in x86_64 aarch64 armhf; do
-                if [ -d "alpine/$arch" ] && [ "$(ls -A alpine/$arch/*.apk 2>/dev/null)" ]; then
-                    cd alpine/$arch
-                    
-                    echo "Signing and indexing packages for $arch..."
-                    
-                    # Sign each package
-                    for apk_file in *.apk; do
-                        if [ -f "$apk_file" ]; then
-                            echo "Signing $apk_file..."
-                            if command -v abuild-sign &> /dev/null; then
-                                abuild-sign -k ~/.abuild/ssh-sync.rsa "$apk_file"
-                            else
-                                echo "Warning: abuild-sign not available, package $apk_file will remain unsigned"
-                            fi
-                        fi
-                    done
-                    
-                    # Create signed APKINDEX
-                    if command -v apk &> /dev/null || [ -f "/tmp/apk.static" ]; then
-                        APK_CMD=${APK_CMD:-/tmp/apk.static}
-                        $APK_CMD index --description "SSH-Sync Repository" \
-                            --rewrite-arch $arch -o APKINDEX.tar.gz *.apk
-                        
-                        # Sign the APKINDEX
-                        if command -v abuild-sign &> /dev/null; then
-                            abuild-sign -k ~/.abuild/ssh-sync.rsa APKINDEX.tar.gz
-                        fi
-                    else
-                        echo "Warning: Could not create APKINDEX for $arch - apk tools not available"
-                    fi
-                    
-                    cd ../..
-                fi
-            done
-
-            echo "Alpine repository setup and signing completed"
-
       - name: Setup Arch Linux Repository
         uses: appleboy/ssh-action@v0.1.10
         with:
@@ -433,14 +343,14 @@ jobs:
           script: |
             cd ${{ secrets.REPO_SERVER_PATH }}
 
-            # Export public key for distribution
+            # Export GPG public key for distribution
             gpg --armor --export "${{ secrets.REPO_SERVER_GPG_KEY_ID }}" > pubkey.gpg
             gpg --armor --export "${{ secrets.REPO_SERVER_GPG_KEY_ID }}" > ssh-sync-repo.asc
 
             # Set proper permissions
             chmod 644 pubkey.gpg ssh-sync-repo.asc
 
-            echo "Public key exported successfully"
+            echo "Public keys exported successfully"
 
   release:
     needs: [build-docker, build-windows, build-linux, sign-and-update-repositories]
@@ -451,5 +361,5 @@ jobs:
         uses: actions/download-artifact@v4
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "./ssh-sync-setup-amd64/ssh-sync-setup-amd64.exe,./ssh-sync-setup-arm64/ssh-sync-setup-arm64.exe,./ssh-sync-amd64/ssh-sync-amd64,./ssh-sync-arm64/ssh-sync-arm64,./ssh-sync-arm/ssh-sync-arm,./packages-amd64/debian/amd64/*.deb,./packages-amd64/rpm/amd64/*.rpm,./packages-amd64/arch/amd64/*.pkg.tar.zst,./packages-amd64/*.apk,./packages-arm64/debian/arm64/*.deb,./packages-arm64/rpm/arm64/*.rpm,./packages-arm64/arch/arm64/*.pkg.tar.zst,./packages-arm64/*.apk,./packages-arm/debian/arm/*.deb,./packages-arm/rpm/arm/*.rpm,./packages-arm/arch/arm/*.pkg.tar.zst,./packages-arm/*.apk"
+          artifacts: "./ssh-sync-setup-amd64/ssh-sync-setup-amd64.exe,./ssh-sync-setup-arm64/ssh-sync-setup-arm64.exe,./ssh-sync-amd64/ssh-sync-amd64,./ssh-sync-arm64/ssh-sync-arm64,./ssh-sync-arm/ssh-sync-arm,./packages-amd64/debian/amd64/*.deb,./packages-amd64/rpm/amd64/*.rpm,./packages-amd64/arch/amd64/*.pkg.tar.zst,./packages-arm64/debian/arm64/*.deb,./packages-arm64/rpm/arm64/*.rpm,./packages-arm64/arch/arm64/*.pkg.tar.zst,./packages-arm/debian/arm/*.deb,./packages-arm/rpm/arm/*.rpm,./packages-arm/arch/arm/*.pkg.tar.zst"
           token: ${{ secrets.ACCESS_TOKEN_CLASSIC }}
